Added soccer run

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
     </div>
 
     <div class="project">
-      <h3><a href="https://github.com/erik-programmer/soccer_run">Soccer run</a></h3>
+      <h3><a href="soccer_run/index.html">Soccer run</a></h3>
       <p>Its a competition game between 3 different teams where every team has 3 players. The logic of the game is
-        totally random. Its written in Lua.</p>
+        totally random. Its written in Lua, and translated to JavaScript by ChatGPT.</p>
     </div>
 
     <div class="project">
